fix header margins on mobile

--- a/src/components/WarehouseItem/WarehouseItem.scss
+++ b/src/components/WarehouseItem/WarehouseItem.scss
@@ -18,6 +18,7 @@
     color: $Slate;
     line-height: 1rem;
     text-transform: uppercase;
+    margin-top: 1rem;
     &--mb {
       display: flex;
       align-items: center;
